<resources>
    <string name="app_name">PawApp</string>

    <string name="contentdes">pet_icon</string>

    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="loginbutton">Iniciar Sesión</string>
    <string name="registerbutton">Regístrate</string>

    <string name="name">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="birthdate">Fecha de Nacimiento</string>
    <string name="phone">Teléfono</string>
    <string name="dni">DNI</string>
    <string name="email">Correo Electrónico</string>
    <string name="address">Dirección</string>
    <string name="regNext">Siguiente</string>

    <string name="titlesurvey01">¿Qué tipo de vivienda posee?</string>
    <string name="titlesurvey02">¿Con cuántas personas vive?</string>
    <string name="titlesurvey03">¿Tiene otra(s) mascota(s)?</string>
    <string name="titlesurvey04">¿De qué tipo es/son la(s) mascota(s)?</string>
    <string name="titlesurvey05">¿En qué modalidad trabaja?</string>
    <string name="titlesurvey06">¿Tiene tiempo suficiente para cuidar de la(s) mascota(s)?</string>
    <string name="regEnd">Finalizar</string>

    <string name="pets">Mascotas</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>

    <string name="petname">Nombre</string>
    <string name="petage">Edad</string>
    <string name="petdes">Descripción</string>
    <string name="petreg">Registrar Mascota</string>
    <string name="petimage">Subir Imagen</string>

</resources>
