<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.pawapp.Fragments.PetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imgDog"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/dog"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/petimage" />

    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/petname">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/PetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilpetage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/petage">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/PetAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilpetdes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/petdes">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/PetDes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top|start"
                android:lines="10"
                android:inputType="text"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spnTypes"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="Tipo de mascota"
            android:textSize="15sp"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spnRaces"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="Raza de la mascota"
            android:textSize="15sp"
            app:met_floatingLabel="normal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petreg"/>

    </LinearLayout>

</FrameLayout>